# py-dev-support

./: LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: py-dev-support.yml
code/: pyproject.toml
code/py_dev_support/: __init__.py  commit_all.py  release.py  version.py
scripts/: publish.sh
