[build-system]
requires = [ "flit_core >=3.2,<4", "click ==8.1.3", "toml ==0.10.2",]
build-backend = "flit_core.buildapi"

[project]
requires = [ "click ==8.1.3", "toml ==0.10.2",]
name = "py_dev_support"
version = "0.1.14"
authors = []
classifiers = [ "License :: OSI Approved :: MIT License",]
dynamic = [ "description",]

[project.license]
file = "LICENSE"

[project.scripts]
dev-version = "py_dev_support.version:run"
dev-release = "py_dev_support.release:run"
